samples/_failures_safe/1761261418_4018dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_068bf808.c: In function ‘main’:
./samples/SAFE/__tmp_068bf808.c:169:9: error: expected expression at end of input
  169 |         printf(" -> '%.*s'\n",
      |         ^~~~~~
./samples/SAFE/__tmp_068bf808.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_068bf808.c:169:9: error: expected declaration or statement at end of input
